# narad

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
narad/: app.py  config.py  database.py  models.py  scheduler.py  schemas.py
narad/api/: articles.py  events.py  intel.py  trading.py
narad/intel/: alerts.py  analyst.py  backtest.py  commodity.py  correlator.py  entity_graph.py  geospatial.py  market_data.py  portfolio.py  query.py  signals.py  threat_matrix.py  trader.py  vessel_sim.py
narad/pipeline/: briefing.py  clusterer.py  deduplicator.py  graph_builder.py  normalizer.py  summarizer.py
narad/sources/: base.py  gdelt.py  newsapi.py  osint_telegram.py  osint_twitter.py  reddit.py  rss.py  thinktanks.py
narad/static/: map_data.json
narad/static/css/: briefing.css  custom.css
narad/static/js/: alerts.js  commodity.js  map_geoint.js  map_init.js  map_layers.js  map_ships.js  market.js  sidebar.js
narad/templates/: base.html  briefing.html  dashboard.html  event_detail.html  events.html  graph.html  intel.html  status.html  trading.html
narad/templates/partials/: sidebar_ask.html  sidebar_markets.html  sidebar_stories.html  sidebar_threat.html
narad/web/: views.py
tests/: conftest.py  test_alerts.py  test_api.py  test_backtest.py  test_intel.py  test_models.py  test_pipeline.py  test_sources.py  test_telegram.py  test_trading.py
